Use fastapi.status codes in objects router
Fix typos
